--- a/tiny/home.html
+++ b/tiny/home.html
@@ -1,7 +1,12 @@
 <html>
 <head><title>test</title></head>
 <body> 
-<img align="middle" src="godzilla.gif">
-Dave O'Hallaron
+<div style='display: flex; flex-direction: column; align-items: center; gap: 20;'>
+    <h2>Krafton Jungle 4th Week6 Team 1</h2>
+    <img align="middle" width="250" src="meme.jpeg">
+    <video controls width="500">
+        <source src="Elemental.mp4" type="video/mp4" />
+    </video>
+</div>
 </body>
 </html>
