add form tag to get adder page

--- a/tiny/home.html
+++ b/tiny/home.html
@@ -7,6 +7,13 @@
     <video controls width="500">
         <source src="Elemental.mp4" type="video/mp4" />
     </video>
+
+    <form action='./cgi-bin/adder' method='get'>
+        <p>Please put two numbers you wanna sum up</p>
+        <input type='number' name='num1'/>
+        <input type='number' name='num2'/>
+        <input type='submit' />
+    </form>
 </div>
 </body>
 </html>
