change video file

--- a/tiny/home.html
+++ b/tiny/home.html
@@ -5,7 +5,7 @@
     <h2>Krafton Jungle 4th Week6 Team 1</h2>
     <img align="middle" width="250" src="meme.jpeg">
     <video controls width="500">
-        <source src="Elemental.mp4" type="video/mp4" />
+        <source src="shortVideo.mp4" type="video/mp4" />
     </video>
 
     <form action='./cgi-bin/adder' method='get'>
