add: proxy server

--- a/tiny/home.html
+++ b/tiny/home.html
@@ -22,6 +22,7 @@
     '>
             Go to Tiny Adder APP</a>
 
+        <img align="middle" width="250" src="godzilla.jpg">
         <img align="middle" width="250" src="meme.jpeg">
         <video controls width="500">
             <source src="shortVideo.mp4" type="video/mp4" />
